New version, Java 11, System.Logger, AutoCloseable, XmlSignatureInput types (#192)
* Start of the development od version 4.0.0

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* POM Updates

- JDK11 instead of JDK8
- Added failsafe (skipped by default)
- Removed JDK profiles
- Removed dependency on SLF4J and LOGJ, XML-APIs
- Updated dependency: Jetty, Maven
- To be continued ...

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* Using System.Logger instead SLF4J - except tests

- Allows to use also SLF4J2, previous version wasn't compatible

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* Added module-info.java

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* Fixed version in XMLDSigRI

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* Added AutoCloseable to readers and writers

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* Method getBytesFromFile made deprecated

- Used just in tests, but might be used by users

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* BufferedStreams replaced by Files.new*Stream calls

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* JMH tests targetting performance (and leaks)

- PerformanceIT is able to detect leaks
  - has limited memory
  - slows down with executions in a single batch
  - fails if executions significantly slow down
  - fails if iterations don't pass limits
  - now fails DOM tests, seems there is some leak.
  - replaces two ignored tests PerformanceMemoryTest and PerformanceTimingTest
  - is executed by the failsafe plugin just on demand: use -DskipIT=false

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

* Cleanups in tests - using Java11+ features

- Created JmhUtils to help JMH
- System.Logger usages instead of slf4j
- Fixed some IO leaks in tests - unclosed streams
- XMLUtilsPerformanceTest now uses JMH
- Removed log4j2.properties

Signe