@@ -30,14 +30,14 @@
 
     <groupId>org.apache.santuario</groupId>
     <artifactId>xmlsec</artifactId>
-    <version>3.0.3-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Apache XML Security for Java</name>
     <description>
         Apache XML Security for Java supports XML-Signature Syntax and Processing,
         W3C Recommendation 12 February 2002, and XML Encryption Syntax and
-        Processing, W3C Recommendation 10 December 2002. As of version 1.4,
+        Processing, W3C Recommendation 10 December 2002. Since version 1.4,
         the library supports the standard Java API JSR-105: XML Digital Signature APIs.
     </description>
     <url>https://santuario.apache.org/</url>
@@ -91,50 +91,57 @@
     </distributionManagement>
 
     <properties>
+        <activation-api.version>2.1.1</activation-api.version>
         <bcprov.version>1.76</bcprov.version>
         <clirr.version>2.8</clirr.version>
         <commons.codec.version>1.15</commons.codec.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <jetty.version>9.4.51.v20230217</jetty.version>
+        <jaxb.runtime>4.0.3</jaxb.runtime>
+        <jetty.version>11.0.15</jetty.version>
+        <jmh.version>1.36</jmh.version>
+        <jetty.version>11.0.15</jetty.version>
         <junit.version>5.10.0</junit.version>
-        <log4j.version>2.20.0</log4j.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <slf4j.version>2.0.7</slf4j.version>
         <xalan.version>2.7.3</xalan.version>
         <xmlunit.version>2.9.1</xmlunit.version>
-        <xml.bind.api.version>3.0.1</xml.bind.api.version>
-        <xml.bind.impl.version>3.0.2</xml.bind.impl.version>
+        <xml.bind.api.version>4.0.0</xml.bind.api.version>
         <woodstox.core.version>6.5.1</woodstox.core.version>
 
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
+        <project.build.outputTimestamp>2023-06-16T19:00:00Z</project.build.outputTimestamp>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>2023-03-27T06:33:07Z</project.build.outputTimestamp>
-        <targetJdk>1.8</targetJdk>
-        <test.logging.level>info</test.logging.level>
 
         <!-- Allow Clirr severity to be overriden by the command-line option -DminSeverity=level -->
         <minSeverity>info</minSeverity>
         <xmlsec.jaxb.context.class />
+
+        <!-- Important for FuncHere.java aka here() -->
+        <maven.test.argLine>
+          -Dfile.encoding=UTF-8
+          -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
+          --add-exports org.apache.santuario.xmlsec/org.apache.xml.security.test.dom.utils.jmh_generated=ALL-UNNAMED
+          --add-exports org.apache.santuario.xmlsec/org.apache.xml.security.test.dom.xalan=ALL-UNNAMED
+          --add-exports org.apache.santuario.xmlsec/org.apache.xml.security.test.stax.performance.jmh_generated=ALL-UNNAMED
+        </maven.test.argLine>
+        <skipUT>false</skipUT>
+        <skipIT>true</skipIT>
+        <test.logging.level>INFO</test.logging.level>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>compile</scope>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>${activation-api.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>${xml.bind.api.version}</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.sun.activation</groupId>
-                    <artifactId>jakarta.activation</artifactId>
-                </exclusion>
-            </exclusions>
+            <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -148,12 +155,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -182,6 +183,19 @@
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-matchers</artifactId>
             <version>${xmlunit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb.runtime}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -220,17 +234,23 @@
             <version>${xalan.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>${xml.bind.impl.version}</version>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <defaultGoal>install</defaultGoal>
-
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -248,13 +268,13 @@
                 <directory>src/test/resources</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>log4j2.xml</include>
+                    <include>logging.properties</include>
                 </includes>
             </testResource>
             <testResource>
                 <directory>src/test/resources</directory>
                 <excludes>
-                    <exclude>log4j2.xml</exclude>
+                    <exclude>logging.properties</exclude>
                 </excludes>
             </testResource>
             <testResource>
@@ -278,7 +298,6 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <source>8</source>
                         <attach>true</attach>
                         <excludePackageNames>org.apache.xml.security.binding.*</excludePackageNames>
                         <doclint>none</doclint>
@@ -371,13 +390,18 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${targetJdk}</source>
-                    <target>${targetJdk}</target>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
                     <compilerArgs>
                         <arg>-XDcompilePolicy=simple</arg>
                         <!-- TODO Disabled until JDK 14 is supported <arg>-Xplugin:ErrorProne</arg>-->
                     </compilerArgs>
                     <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.openjdk.jmh</groupId>
+                            <artifactId>jmh-generator-annprocess</artifactId>
+                            <version>${jmh.version}</version>
+                        </path>
                         <path>
                             <groupId>com.google.errorprone</groupId>
                             <artifactId>error_prone_core</artifactId>
@@ -392,6 +416,7 @@
                 <version>5.1.8</version>
                 <extensions>true</extensions>
                 <configuration>
+                    <niceManifest>true</niceManifest>
                     <instructions>
                         <Implementation-Title>Apache XML Security</Implementation-Title>
                         <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
@@ -401,17 +426,15 @@
                         <Specification-Vendor>The Apache Software Foundation</Specification-Vendor>
                         <Specification-Version>${project.version}</Specification-Version>
                         <Export-Package>
-                              org.apache.xml.security.*;version="${project.version}",
+                              org.apache.xml.security.*;version="${project.version}";-split-package:=first,
                               org.apache.jcp.xml.dsig.internal.*;version="${project.version}",
                         </Export-Package>
                         <Import-Package>
                               !org.apache.xml.security.*,
                               !org.apache.jcp.xml.dsig.internal.*,
-                              org.slf4j.*;version="[1.7,3)",
-                              org.apache.commons.codec.*;version="[1.6,2)",
+                              org.apache.commons.codec.*;version="[1.15,2)",
                               *
                         </Import-Package>
-                        <Automatic-Module-Name>org.apache.santuario.xmlsec</Automatic-Module-Name>
                         <_noimportjava>true</_noimportjava>
                     </instructions>
                 </configuration>
@@ -421,6 +444,17 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.10</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <includes>
+                        <include>org/apache/xml/security/**</include>
+                        <include>org/apache/jcp/xml/dsig/internal/**</include>
+                    </includes>
+                    <formats>
+                        <!-- Eclipse uses exec files, SonarQube uses xml reports -->
+                        <format>XML</format>
+                    </formats>
+                </configuration>
                 <executions>
                     <execution>
                         <id>jacoco-agent-for-unit-tests</id>
@@ -442,32 +476,72 @@
                 <version>3.1.0</version>
                 <configuration>
                     <reportFormat>brief</reportFormat>
-                    <!-- We need to reinitialize classes based on the configuration -->
-                    <reuseForks>false</reuseForks>
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
-                    <excludes>
-                        <exclude>**/PerformanceMemoryTest.java</exclude>
-                        <exclude>**/PerformanceTimingTest.java</exclude>
-                    </excludes>
+                    <excludedGroups>benchmark</excludedGroups>
+                    <!-- We need to reinitialize classes based on the configuration -->
+                    <reuseForks>false</reuseForks>
+                    <forkCount>1</forkCount>
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
                     <!-- @{argLine} is generated by jacoco-prepare -->
-                    <argLine>@{argLine}</argLine>
+                    <argLine>${maven.test.argLine} @{argLine}</argLine>
+                    <skipExec>${skipUT}</skipExec>
                     <systemPropertyVariables>
                         <product.version>${project.version}</product.version>
                         <log4j.configurationFile>${project.build.testOutputDirectory}/log4j2.xml</log4j.configurationFile>
                         <!--<jakarta.xml.bind.JAXBContext>${xmlsec.jaxb.context.class}</jakarta.xml.bind.JAXBContext>-->
                         <javax.xml.accessExternalDTD>file</javax.xml.accessExternalDTD>
                         <org.apache.xml.security.securerandom.algorithm>SHA1PRNG</org.apache.xml.security.securerandom.algorithm>
+                        <file.encoding>UTF-8</file.encoding>
                     </systemPropertyVariables>
+                    <environmentVariables>
+                        <LANG>en_US.UTF-8</LANG>
+                        <LANGUAGE>en_US:us</LANGUAGE>
+                    </environmentVariables>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <argLine>${maven.test.argLine}</argLine>
+                    <skipExec>${skipIT}</skipExec>
+                    <groups>benchmark</groups>
+                    <forkCount>1</forkCount>
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
+                    <systemPropertyVariables>
+                        <product.version>${project.version}</product.version>
+                        <javax.xml.accessExternalDTD>file</javax.xml.accessExternalDTD>
+                        <org.apache.xml.security.securerandom.algorithm>SHA1PRNG</org.apache.xml.security.securerandom.algorithm>
+                        <file.encoding>UTF-8</file.encoding>
+                    </systemPropertyVariables>
+                    <environmentVariables>
+                        <LANG>en_US.UTF-8</LANG>
+                        <LANGUAGE>en_US:us</LANGUAGE>
+                    </environmentVariables>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                  <groupId>org.gaul</groupId>
                  <artifactId>modernizer-maven-plugin</artifactId>
                  <version>2.6.0</version>
                  <configuration>
-                     <javaVersion>${targetJdk}</javaVersion>
+                     <javaVersion>${maven.compiler.release}</javaVersion>
                  </configuration>
                  <executions>
                      <execution>
@@ -481,17 +555,21 @@
             </plugin>
             <plugin>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.15.0</version>
+                <version>3.21.0</version>
                 <configuration>
                     <rulesets>
                         <ruleset>${basedir}/etc/santuario-pmd-ruleset.xml</ruleset>
                     </rulesets>
                     <linkXRef>false</linkXRef>
-                    <sourceEncoding>UTF-8</sourceEncoding>
                     <failOnViolation>true</failOnViolation>
                     <verbose>true</verbose>
-                    <includeTests>false</includeTests>
-                    <targetJdk>${targetJdk}</targetJdk>
+                    <includeTests>true</includeTests>
+                    <excludes>
+                        <exclude>**/XMLUtilsPerformanceIT.java</exclude>
+                    </excludes>
+                    <excludeRoots>
+                        <excludeRoot>${project.build.directory}/generated-test-sources</excludeRoot>
+                    </excludeRoots>
                 </configuration>
                 <executions>
                     <execution>
@@ -575,45 +653,5 @@
                 <pmd.skip>true</pmd.skip>
             </properties>
         </profile>
-        <profile>
-            <id>jdk8</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-compiler-plugin</artifactId>
-                            <configuration>
-                                <fork>true</fork>
-                                <compilerArgs combine.children="append">
-                                    <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/9+181-r4173-1/javac-9+181-r4173-1.jar</arg>
-                                </compilerArgs>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-         </profile>
-         <profile>
-            <id>jdk9-plus</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <configuration>
-                                <argLine>--add-opens java.base/java.lang.reflect=ALL-UNNAMED @{argLine}</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-             </build>
-         </profile>
-
     </profiles>
 </project>
